--- a/Web_lr1/style.css
+++ b/Web_lr1/style.css
@@ -1,7 +1,6 @@
 body {
-  margin: auto;
-  width: 100vw;
-  height: 100vh;
+  margin: 0;
+  background-attachment: fixed;
   background-image: radial-gradient(
     farthest-corner at 40px 40px,
     #f35 0%,
@@ -19,7 +18,6 @@ header {
   border-bottom-right-radius: 30px;
   padding: 20px;
   padding-bottom: 0;
-
   box-shadow: 0px 0px 50px black;
 }
 
@@ -32,20 +30,80 @@ header {
   padding: 20px;
 }
 
-.popup > .popup-title {
+.popup .popup-title {
+  text-align: center;
   font-size: 40px;
   cursor: pointer;
 }
 
-.popup > .popup-text {
+.popup .popup-text {
+  text-align: center;
   opacity: 0;
   height: 0;
   font-size: 20px;
   margin: 0;
-
   transition: all 1s ease;
 }
 
 .popup-title:hover + .popup-text {
+  opacity: 1;
+}
+
+.container {
+  position: relative;
+  display: flex;
+  width: 75%;
+  justify-content: center;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 7%;
+  margin: 40px auto;
+  row-gap: 50px;
+}
+
+.product-card {
+  position: relative;
+  text-decoration: none;
+  color: black;
+  display: grid;
+  cursor: pointer;
+  justify-content: center;
+  background-color: white;
+  border-radius: 15px;
+  min-width: 225px;
+  width: 17.5%;
+  min-height: 270px;
+  padding-bottom: 10px;
+  box-shadow: 0px 0px 25px;
+}
+
+.product-card .product-image {
+  height: 220px;
+  width: 85%;
+  margin: 7.5%;
+  border-radius: 15px;
+}
+
+.product-card .product-name {
+  font-size: 1.5rem;
+  margin: 0 4%;
+  margin-bottom: 5px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  text-align: center;
+}
+
+.product-card .product-characters {
+  overflow: hidden;
+  opacity: 0;
+  margin: 0;
+  margin-left: -30px;
+  font-size: 18px;
+  height: 0;
+  list-style-type: none;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  transition: all 0.5s ease;
+}
+
+.product-card:hover .product-characters {
   opacity: 1;
 }
